<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img"
        tools:context=".activities.SelectAccountActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_8sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_22sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_22sdp" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/splash"
            app:layout_constraintBottom_toTopOf="@id/txt_welcome"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_welcome"
            style="@style/stylewelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <TextView
            android:id="@+id/txt_please"
            style="@style/styleplease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plase"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome" />

        <Button
            android:id="@+id/btn_brand"
            style="@style/btnblack"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btn_black"
            android:text="@string/brand"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/txt_please" />

        <Button
            android:id="@+id/btn_customer"
            style="@style/btnwhite"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btn_white"
            android:text="@string/customer"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/btn_brand" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
