<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".brand.activities.CardDetail">

        <TextView
            style="@style/txtalpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subsandpay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_90sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/_270sdp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/_16sdp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/_16sdp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_login"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="@dimen/_22sdp"
                    app:layout_constraintBottom_toTopOf="@id/guide_center"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_name"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_marginTop="@dimen/_32sdp"
                            android:background="@drawable/et_shape"
                            android:hint="@string/cardholder"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/et_card_number"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:drawableStart="@drawable/material_icon_cardpay"
                            android:hint="@string/cardnumber"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_name" />

                        <EditText
                            android:id="@+id/et_date"
                            style="@style/et_style"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:hint="@string/date"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_card_number" />

                        <EditText
                            android:id="@+id/et_cvv"
                            style="@style/et_style"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:hint="@string/cvv"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_card_number" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_22sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_22sdp"
                            android:text="@string/dicrip"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_date" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_pay"
                    style="@style/btnblack"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_52sdp"
                    android:layout_marginEnd="@dimen/_22sdp"
                    android:background="@drawable/btn_black"
                    android:text="@string/pay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_login" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
