<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".activities.RegisterActivity">

        <ImageView
            android:id="@+id/img_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/material_icon_backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/txtalpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/_55sdp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_back_arrow">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_32sdp">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:elevation="3dp"
                    android:src="@drawable/img_profile_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/_70sdp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/_460sdp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/_16sdp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/_16sdp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_login"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="@dimen/_22sdp"
                    app:layout_constraintBottom_toTopOf="@id/guide_center"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/guide_top">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="498dp">

                        <EditText
                            android:id="@+id/et_name"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_marginTop="@dimen/_62sdp"
                            android:background="@drawable/et_shape"
                            android:drawableStart="@drawable/material_icon_profile"
                            android:hint="@string/full_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/et_email"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:drawableStart="@drawable/material_icon_email"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_name" />

                        <EditText
                            android:id="@+id/et_phone"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:drawableStart="@drawable/material_icon_phone"
                            android:hint="@string/phone"
                            android:imeOptions="actionNext"
                            android:inputType="phone|number"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_email" />

                        <EditText
                            android:id="@+id/et_password"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:drawableStart="@drawable/material_icon_password"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_phone" />

                        <EditText
                            android:id="@+id/et_password_again"
                            style="@style/et_style"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/et_shape"
                            android:drawableStart="@drawable/material_icon_password"
                            android:hint="@string/again_pwd"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/et_password" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/btnblack"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_22sdp"
                    android:layout_marginBottom="@dimen/_22sdp"
                    android:background="@drawable/btn_black"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_login" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
